--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "lightbox2": "^2.11.4",
+        "lightgallery": "^2.7.2"
     }
 }
